--- a/index.html
+++ b/index.html
@@ -1,28 +1,39 @@
 <!DOCTYPE html>
 <html lang="ru">
+
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Card Game</title>
-    <link rel="stylesheet" href="style.css">
-    <link rel="stylesheet" href="fonts.css">
-    <link rel="stylesheet" href="adaptive.css">
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Card Game</title>
+  <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="fonts.css">
+  <link rel="stylesheet" href="adaptive.css">
 </head>
+
 <body class="body">
   <div class="wrapper">
-    <section id="section" class="main">
+    <section class="main">
       <h1 class="main__title">Выберите уровень сложности:</h1>
       <h2 class="main__subtitle">Выберите сложность и игра начнется.</h2>
-      <p class="main__subtitle main__subtitle_little-font">Чем выше уровень - тем больше будет выборка карт.</p>
-      <a id="light" class="main__level main__light">Простой</a>
-      <a id="middle" class="main__level main__middle">Средний</a>
-      <a id="hard"  class="main__level main__hard">Сложный</a>
-      <a id="button" class="main__btn">Начать игру</a>
-        <div class="card-wrap__card">
-        <div class="card-wrap__card card-wrap__card_up"></div></div>
+      <p class="main__subtitle subtitle__little-font">Чем выше уровень - тем больше будет выборка карт.</p>
+      <nav class="nav">
+        <label class="nav__level level__active">
+          <input class="level__input" type="button" value="Простой" id="simple"></label>
+
+        <label class="nav__level">
+          <input class="level__input" type="button" value="Средний" id="middle"></label>
+
+        <label class="nav__level">
+          <input class="level__input" type="button" value="Сложный" id="hard"></label>
+      </nav>
+      <a class="main__btn">Начать игру</a>
+      <div class="card-wrap__card">
+        <div class="card-wrap__card card-wrap__card-up"></div>
+      </div>
     </section>
-    <div id="card-game" class="card-game"></div>
+    <div class="card-game none"></div>
   </div>
   <script src="script.js"></script>
 </body>
+
 </html>
