--- a/index.html
+++ b/index.html
@@ -14,8 +14,8 @@
   <div class="wrapper">
     <section class="main">
       <h1 class="main__title">Выберите уровень сложности:</h1>
-      <h2 class="main__subtitle">Выберите сложность и игра начнется.</h2>
-      <p class="main__subtitle subtitle__little-font">Чем выше уровень - тем больше будет выборка карт.</p>
+      <h2 class="main__subtitle">Выберите сложность и игра начнется.
+        Чем выше уровень - тем больше будет выборка карт</h2>
       <nav class="nav">
         <label class="nav__level level__active">
           <input class="level__input" type="button" value="Простой" id="simple"></label>
